turmites.lessons.turmites.langton.Langton.scala.code
def step() {

var c:Color = Color.BLACK
def setCouleur(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}

for (k <- 0 to 20000) {

if (getCouleurSol()==Color.BLACK) {
	setCouleur(WHITE)
	gauche()
	avance()
}
else {
	setCouleur(BLACK)
	droite()
	avance()
	
}
	


}

}
